# mediscan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  packages.txt  project-status.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: 00-product-brief.md  01-architecture.md  02-repo-structure.md  03-sprint-roadmap.md  04-decision-log.md  05-environment-setup.md  06-reflections.md  07-python-project-starter-playbook.md  08-sprint-2-plan.md  09-sprint-3-plan.md  10-sprint-4-plan.md  11-sprint-5-plan.md  12-understanding-the-codebase.md  13-sprint-6-plan.md  14-sprint-6.5-plan.md  15-sprint-7-plan.md  16-sprint-8-plan.md  17-deploy-config.md  18-evaluation.md
scripts/: local_recall.py
src/mediscan/: __init__.py  config.py
src/mediscan/ai/: base.py  chain.py  exceptions.py  explain.py  prompts.py  structured.py  templates.py
src/mediscan/ai/providers/: openai_compatible.py
src/mediscan/confidence/: __init__.py  scoring.py
src/mediscan/evaluation/: __init__.py  __main__.py  extraction.py  grounding.py
src/mediscan/extraction/: metadata.py  normalization.py  parser.py
src/mediscan/ingestion/: exceptions.py  storage.py  validators.py
src/mediscan/medical/: coverage.py  phrasing.py  ranges.py  reference_data.py  severity.py  urgency.py
src/mediscan/observability/: __init__.py
src/mediscan/ocr/: _pdf.py  _rows.py  base.py  exceptions.py  factory.py  paddle_engine.py  preprocessing.py  pymupdf_engine.py  router.py  scanned_pdf.py
src/mediscan/orchestration/: __init__.py  pipeline.py
src/mediscan/rag/: embedding.py  index.py  retriever.py
src/mediscan/reports/: __init__.py  pdf.py  render.py
src/mediscan/safety/: guardrail.py
src/mediscan/schemas/: __init__.py  ai.py  base.py  confidence.py  coverage.py  documents.py  extraction.py  knowledge.py  labs.py  medical.py  patient.py  report.py  summaries.py  urgency.py
src/mediscan/ui/: __init__.py  __main__.py  app.py
tests/: conftest.py
tests/fixtures/: full_panel.py  generate.py
tests/fixtures/files/: README.md
tests/integration/: test_app_e2e.py  test_document_to_assessment.py  test_document_to_report.py  test_full_panel_coverage.py  test_ingest_to_text.py
tests/packaging/: test_wheel_contents.py
tests/unit/: test_config.py
tests/unit/ai/: test_ai_adversarial.py  test_ai_layer.py  test_explanation_assembly.py
tests/unit/confidence/: test_scoring.py  test_scoring_empty.py
tests/unit/evaluation/: test_extraction_eval.py  test_grounding_eval.py
tests/unit/extraction/: test_metadata.py  test_normalization.py  test_parser.py  test_parser_messy_ranges.py  test_parser_recognizers.py
tests/unit/ingestion/: test_storage.py  test_validators.py
tests/unit/medical/: test_coverage.py  test_coverage_adversarial.py  test_kb_integrity.py  test_phrasing.py  test_ranges.py  test_reference_data.py  test_severity.py  test_urgency.py  test_urgency_adversarial.py
tests/unit/observability/: test_logging.py
tests/unit/ocr/: test_base.py  test_factory.py  test_paddle_engine.py  test_pdf_helper.py  test_preprocessing.py  test_router.py  test_row_reconstruction.py  test_scanned_pdf.py
tests/unit/orchestration/: test_concurrency_adversarial.py  test_observability.py  test_pipeline.py  test_pipeline_async.py
tests/unit/rag/: test_cache_root.py  test_index_persistence.py  test_index_persistence_live.py  test_rag_adversarial.py  test_rag_layer.py
tests/unit/reports/: conftest.py  test_render_html.py  test_render_pdf.py
tests/unit/schemas/: test_confidence.py  test_coverage_schema.py  test_documents.py  test_extraction.py  test_knowledge.py  test_labs.py  test_patient.py  test_report.py  test_summaries.py  test_urgency.py
tests/unit/ui/: test_app_seam.py
(+10 files in other folders)
