[project]
name = "mediscan"
version = "0.1.0"
description = "Intelligent Medical Report Analyzer — AI-assisted medical document intelligence with explainable clinical analysis"
readme = "README.md"
authors = [
    { name = "Rohit Agrawal", email = "rohitagr06@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
