[project]
name = "mediscan"
version = "0.1.0"
description = "Intelligent Medical Report Analyzer — AI-assisted medical document intelligence with explainable clinical analysis"
readme = "README.md"
authors = [
    { name = "Rohit Agrawal", email = "rohitagr06@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "openai>=2.44.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pillow>=12.3.0",
    "pip-audit>=2.7.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=5.0.0",
    "reportlab>=5.0.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: tests that run real OCR models (excluded by default)"]
addopts = "-m 'not slow'"

[tool.coverage.run]
source = ["src/mediscan"]
# Only the still-empty Sprint-8 presentation scaffolds are omitted. The
# orchestration + confidence packages now hold real, tested code (Sprint 7),
# so they ARE measured.
omit = ["*/ui/*", "*/reports/*"]

[tool.coverage.report]
show_missing = true
# Ratchet: CI passes --cov-fail-under to enforce a floor. Bump it as coverage
# rises; never lower it. (Set to your measured baseline minus a small margin.)
